--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "author": "KaeserOfHonour",
     "main": "node_modules/expo/AppEntry.js",
     "scripts": {
-        "start": "expo start",
+        "dev": "expo start",
         "android": "expo start --android",
         "ios": "expo start --ios",
         "web": "expo start --web",
@@ -15,14 +15,14 @@
         "format": "prettier --write \"src/**/*.{ts,tsx}\""
     },
     "dependencies": {
-        "expo": "~48.0.18",
-        "expo-status-bar": "~1.4.4",
-        "react": "18.2.0",
-        "react-native": "0.71.8"
+        "expo": "^49.0.4",
+        "expo-status-bar": "^1.6.0",
+        "react": "^18.2.0",
+        "react-native": "^0.72.3"
     },
     "devDependencies": {
-        "@babel/core": "^7.20.0",
-        "@types/react": "~18.0.14",
+        "@babel/core": "^7.22.9",
+        "@types/react": "^18.2.15",
         "@typescript-eslint/eslint-plugin": "^6.1.0",
         "@typescript-eslint/parser": "^6.1.0",
         "eslint": "^8.45.0",
