--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
         "web": "expo start --web",
         "lint": "eslint ./ --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
         "lint:fix": "eslint ./ --ext ts,tsx --report-unused-disable-directives --max-warnings 0 --fix",
-        "format": "prettier --write \"src/**/*.{ts,tsx}\""
+        "format": "prettier --write \"src/**/*.{ts,tsx}\"",
+        "prepare": "husky install"
     },
     "dependencies": {
         "expo": "^49.0.4",
@@ -36,7 +37,7 @@
         "eslint-plugin-react-hooks": "^4.6.0",
         "eslint-plugin-react-native": "^4.0.0",
         "eslint-plugin-react-refresh": "^0.4.3",
-        "husky": "^8.0.3",
+        "husky": "^8.0.0",
         "lint-staged": "^13.2.3",
         "prettier": "^3.0.0",
         "typescript": "^5.1.6"
